charts/kafka-operator/ingress/ingress-kafka-0-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-0
  labels:
    app: kafka
spec:
  rules:
  - host: "kafka-0.kafka.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-0
            port:
              number: 9020

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-1
  labels:
    app: kafka
spec:
  rules:
  - host: "kafka-1.kafka.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-1
            port:
              number: 9020
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-2
  labels:
    app: kafka
spec:
  rules:
  - host: "kafka-2.kafka.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-2
            port:
              number: 9020
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-all-broker
  labels:
    app: kafka
spec:
  rules:
  - host: "kafka-all-broker.kafka.svc.cluster.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kafka-all-broker
            port:
              number: 29092
